# MemoryOs

./: .env.example  .replit  README.md  package.json  pnpm-lock.yaml  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  memoryos-openapi-collision.md  memoryos-python-backend.md
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/src/: app.ts
artifacts/api-server/src/routes/: documents.ts  index.ts  indexing.ts  search.ts  stats.ts  timeline.ts
artifacts/memory-os/: index.html  package.json
artifacts/memory-os/.replit-artifact/: artifact.toml
artifacts/memory-os/src/: App.tsx  index.css
artifacts/memory-os/src/components/: layout.tsx
artifacts/memory-os/src/components/ui/: badge.tsx  button.tsx  input.tsx  progress.tsx
artifacts/memory-os/src/lib/: format.ts  icons.ts
artifacts/memory-os/src/pages/: dashboard.tsx  document-viewer.tsx  landing.tsx  not-found.tsx  search.tsx  settings.tsx  timeline.tsx
attached_assets/: Pasted-The-current-project-already-has-a-working-React-fronten_1782889419528.txt
backend/: memoryos.db  requirements.txt  seed.py
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py  utils.py
backend/app/routers/: documents.py  health.py  indexing.py  search.py  stats.py  timeline.py
backend/app/services/: chroma_service.py  embedding_service.py  indexing_service.py  ocr_service.py  ollama_service.py  search_service.py  summary_service.py
lib/api-spec/: openapi.yaml
lib/db/src/schema/: documents.ts  folders.ts  index.ts  search_history.ts
